# icfp2016

./: .gitignore  README.txt  icfp2016.cabal  submissions.txt  submit.sh
core/: Folding.hs  Geom.hs  Problem.hs  Solution.hs  Tokenizer.hs
renderer/: Main.hs
solver/: Main.hs
src/: Folding.hs  Geom.hs  Main.hs  Problem.hs  Renderer.hs  Solution.hs  Tokenizer.hs
submitter/: Main.hs
