name:                icfp2016
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/icfp2016#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable solution
  hs-source-dirs:      src
  main-is:             Solution.hs
  other-modules:       Geom, Problem, Tokenizer
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
  ghc-options:         -O2 -main-is Solution

executable renderer
  hs-source-dirs:      src
  main-is:             Renderer.hs
  other-modules:       Geom, Problem, Tokenizer
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , OpenGL
                     , GLUT
  ghc-options:         -fno-ghci-sandbox -main-is Renderer
