name:                icfp2016
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/icfp2016#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      core
  exposed-modules:     Folding, Geom, Problem, Solution, Tokenizer
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , containers
  ghc-options:         -O2

executable solver
  hs-source-dirs:      solver
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , icfp2016
  ghc-options:         -O2

executable renderer
  hs-source-dirs:      renderer
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , OpenGL
                     , GLUT
                     , icfp2016
  ghc-options:         -O2 -fno-ghci-sandbox
